--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -21,3 +21,6 @@ test:
 # instead read values from the environment.
 production:
   secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
+
+qa:
+  secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
