--- a/docker-compose.test.env
+++ b/docker-compose.test.env
@@ -8,3 +8,4 @@ RABBITMQ_EXCHANGE_NAME=babili
 RABBITMQ_EXCHANGE_DURABLE=true
 DISABLE_FLU_AUTO_CONNECT=true
 RAILS_ENV=test
+POSTGRES_HOST_AUTH_METHOD=trust
